fixed navbar on archive page, fixed alignment on resources page

--- a/resources.css
+++ b/resources.css
@@ -5,7 +5,7 @@ body {
 }
 
 .navbar{
-  justify-content: center !important;
+  /* justify-content: center !important; */
 }
 
 .navbar-brand{
@@ -51,4 +51,8 @@ body {
   text-align: left;
   font-size: 18px;
   padding: 1px 40px;
+}
+
+.buttons {
+  text-align: center;
 }
